--- a/app/views/admin/bikes/index.html.haml
+++ b/app/views/admin/bikes/index.html.haml
@@ -17,6 +17,19 @@
         - non_example_active = params[:search_non_example].present?
         = link_to "non-example", admin_bikes_path(sortable_search_params.merge(search_example: nil, search_non_example: non_example_active ? nil : true)), class: "nav-link #{non_example_active ? 'active' : ''}"
       %li.nav-item
+        - any_origin_active = @origin_search_type.blank?
+        %a.nav-link.dropdown-toggle{ href: "#", role: "button", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false", class: (any_origin_active ? "" : "active") }
+          - if any_origin_active
+            Origin
+          - else
+            = @origin_search_type.humanize
+        .dropdown-menu
+          = link_to "Any Origin", admin_bikes_path(sortable_search_params.merge(search_origin: nil)), class: "dropdown-item #{any_origin_active ? 'active' : ''}"
+          .dropdown-divider
+          - CreationState.origins.each do |origin|
+            - origin_active = @origin_search_type == origin
+            = link_to origin.humanize, admin_bikes_path(sortable_search_params.merge(search_origin: origin_active ? nil : origin)), class: "dropdown-item #{origin_active ? 'active' : ''}"
+      %li.nav-item
         %a.nav-link.dropdown-toggle{ href: "#", role: "button", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false", class: (@pos_search_type.present? ? "active" : "") }
           - if @pos_search_type.present?
             = @pos_search_type.humanize
@@ -79,6 +92,14 @@
           %li
             By organization:
             = link_to current_organization.name, admin_organization_path(current_organization.to_param)
+            %small.less-strong
+              - if params[:search_only_creation_organization].present?
+                viewing only bikes created by organization
+                = link_to "view all associated bikes", admin_bikes_path(sortable_search_params.merge(search_only_creation_organization: nil))
+              - else
+                viewing all associated bikes -
+                = link_to "view only bikes created by", admin_bikes_path(sortable_search_params.merge(search_only_creation_organization: true))
+
         - if params[:search_user_id].present?
           %li
             - if @user.present?
@@ -105,6 +126,13 @@
       = hidden_field_tag :period, params[:period]
       = hidden_field_tag :start_time, params[:start_time]
       = hidden_field_tag :end_time, params[:end_time]
+      = hidden_field_tag :search_example, params[:search_example]
+      = hidden_field_tag :search_non_example, params[:search_non_example]
+      = hidden_field_tag :search_stolen, params[:search_stolen]
+      = hidden_field_tag :search_pos, params[:search_pos]
+      = hidden_field_tag :search_origin, params[:search_origin]
+      = hidden_field_tag :search_only_creation_organization, params[:search_only_creation_organization]
+      = hidden_field_tag :search_user_id, params[:search_user_id]
 
       = hidden_field_tag :organization_id
       .form-group.ml-auto.mr-2.mb-2
