--- a/app/views/organized_mailer/graduated_notification.text.haml
+++ b/app/views/organized_mailer/graduated_notification.text.haml
@@ -12,5 +12,5 @@ Renew Your Bike Registration
 
   to renew
 
-Your #{@bike.type} registration is set to expire soon.
+Your #{@bike.type} registration with #{@organization.name} is set to expire soon.
 
