--- a/app/views/admin/mail_snippets/new.html.haml
+++ b/app/views/admin/mail_snippets/new.html.haml
@@ -1,8 +1,9 @@
 %h1 New Snippet
 
+.row
+  .col-md-6
+    = form_for [:admin, @mail_snippet] do |f|
+      = render partial: 'form', locals: { f: f }
+      = f.hidden_field :is_location_triggered, value: true
 
-= form_for [:admin, @mail_snippet] do |f|
-  = render partial: 'form', locals: { f: f }
-  = f.hidden_field :is_location_triggered, value: true
-
-  = f.submit "Create", class: 'btn btn-success float-right'
+      = f.submit "Create", class: 'btn btn-success float-right'
