--- a/app/views/admin/mail_snippets/edit.html.haml
+++ b/app/views/admin/mail_snippets/edit.html.haml
@@ -1,11 +1,13 @@
 %h1.mt-4
   Edit Snippet
 
-= form_for [:admin, @mail_snippet] do |f|
-  = render partial: 'form', locals: { f: f }
+.row
+  .col-md-6
+    = form_for [:admin, @mail_snippet] do |f|
+      = render partial: 'form', locals: { f: f }
 
-  .form-group
-    = f.label :is_enabled, "Enabled?"
-    = f.check_box :is_enabled
+      .form-group
+        = f.label :is_enabled, "Enabled?"
+        = f.check_box :is_enabled
 
-  = f.submit "Update", class: 'btn btn-success float-right'
+      = f.submit "Update", class: 'btn btn-success float-right'
