--- a/app/views/admin/mail_snippets/index.html.haml
+++ b/app/views/admin/mail_snippets/index.html.haml
@@ -8,12 +8,15 @@
         = link_to "new snippet", new_admin_mail_snippet_path, class: "nav-link"
       %li.nav-item
         %a.nav-link.dropdown-toggle{ href: "#", role: "button", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false", class: (@search_kind == "all" ? "" : "active") }
-          #{@search_kind.humanize} kind
+          - if @search_kind == "all"
+            All kinds
+          - else
+            = @search_kind.humanize
         .dropdown-menu
           - (["all"] + MailSnippet.kinds).each do |kind|
             - kind_active = @search_kind == kind
-            - kind_link_params = sortable_search_params.merge(search_status: (kind_active ? nil : kind))
-            - display_kind = "#{kind.humanize} kind"
+            - kind_link_params = sortable_search_params.merge(search_kind: (kind_active ? nil : kind))
+            - display_kind = kind == "all" ? "All kinds" : kind.humanize
             = link_to display_kind, admin_mail_snippets_path(kind_link_params), class: "dropdown-item #{kind_active ? 'active' : ''}"
             - if kind == "all" # Add a divider after all
               .dropdown-divider
@@ -67,7 +70,7 @@
               - if mail_snippet.organization.present?
                 = link_to mail_snippet.organization&.short_name, admin_mail_snippets_path(sortable_search_params.merge(organization_id: mail_snippet.organization_id))
           %td
-            = mail_snippet.kind
+            = mail_snippet.kind.humanize
           %td
             %small
               = truncate(mail_snippet.body, length: 100)
