--- a/app/views/organized_mailer/partial_registration.text.haml
+++ b/app/views/organized_mailer/partial_registration.text.haml
@@ -1,5 +1,8 @@
 = t(".text.youre_almost_done")
 
+- if @organization && @organization.mail_snippet_body("partial").present?
+  = @organization.mail_snippet_body("partial").html_safe
+
 = t(".text.youre_just_a_few_steps_away_from_register")
 
 = t(".text.go_to_the_following_url_to_finish")
