--- a/app/views/admin/organizations/custom_layouts/_mail_snippet.html.haml
+++ b/app/views/admin/organizations/custom_layouts/_mail_snippet.html.haml
@@ -3,11 +3,11 @@
     = render partial: "/shared/errors", locals: { name: "Organization", obj: @organization  }
   = form_for @organization, { as: :organization, url: admin_organization_custom_layout_path(organization_id: @organization.to_param, id: params[:id]), action: 'update' } do |f|
     = f.fields_for :mail_snippets do |snippet|
-      - snippet_name = snippet.object.name
-      - next unless snippet_name == @edit_template
-      - snippet_description = MailSnippet.organization_snippets[snippet.object.name.to_sym]
+      - snippet_kind = snippet.object.kind
+      - next unless snippet_kind == @edit_template
+      - snippet_description = MailSnippet.organization_snippets[snippet.object.kind.to_sym]
       .form-group
-        = snippet.label :body, "#{snippet.object.name.titleize} snippet"
+        = snippet.label :body, "#{snippet.object.kind.titleize} snippet"
         = snippet.text_area :body, placeholder: snippet_description, rows: 10, class: "form-control"
       .row
         .col-md-6
