--- a/app/views/organized_mailer/partial_registration.text.haml
+++ b/app/views/organized_mailer/partial_registration.text.haml
@@ -2,6 +2,9 @@
 
 = t(".text.youre_just_a_few_steps_away_from_register")
 
+- if @organization && @organization.mail_snippet_body("partial").present?
+  = @organization.mail_snippet_body("partial").html_safe
+
 = t(".text.go_to_the_following_url_to_finish")
 
 = new_bike_url(b_param_token: @b_param.id_token)
