--- a/app/assets/stylesheets/revised/pages/organized/parking_notifications.scss
+++ b/app/assets/stylesheets/revised/pages/organized/parking_notifications.scss
@@ -4,6 +4,7 @@
   margin: 30px auto;
   border: 1px solid #ccc;
   border-radius: 4px;
+  background: #e6e6e6;
   iframe {
     min-height: 800px;
     width: 100%;
