--- a/app/views/layouts/email.html.haml
+++ b/app/views/layouts/email.html.haml
@@ -9,6 +9,7 @@
     - if @email_preview
       :css
         .binx-wrapper { margin: 0; }
+        html { background: #e6e6e6; }
 
   %body
     .binx-wrapper
