--- a/app/assets/stylesheets/revised/emails/email_components.scss
+++ b/app/assets/stylesheets/revised/emails/email_components.scss
@@ -9,6 +9,10 @@
   display: block;
   text-align: center;
   max-width: 100%;
+  &:hover {
+    color: #fff;
+    text-decoration: none;
+  }
 }
 
 .donate-message {
