--- a/app/views/admin/organizations/show.html.haml
+++ b/app/views/admin/organizations/show.html.haml
@@ -376,7 +376,7 @@
               = location.name
             %p
               Phone:
-              = display_phone(location.phone)
+              = phone_display(location.phone)
             %p
               Address:
               = location.address
