--- a/app/views/admin/users/edit.html.haml
+++ b/app/views/admin/users/edit.html.haml
@@ -103,7 +103,7 @@
         %td
           Phone
         %td
-          = @user.phone_display
+          = phone_display(@user.phone)
       %tr
         %td
           Website
