--- a/app/views/admin/ownerships/edit.html.haml
+++ b/app/views/admin/ownerships/edit.html.haml
@@ -55,6 +55,11 @@
           = @bike.owner.email
       %tr
         %td
+          Send Email
+        %td
+          = @ownership.send_email
+      %tr
+        %td
           Cached Data
         %td
           = @bike.cached_data
