--- a/app/views/admin/ownerships/edit.html.haml
+++ b/app/views/admin/ownerships/edit.html.haml
@@ -57,7 +57,7 @@
         %td
           Send Email
         %td
-          = @ownership.send_email
+          = check_mark if @ownership.send_email
       %tr
         %td
           Cached Data
