--- a/app/views/organized/hot_sheets/show.html.haml
+++ b/app/views/organized/hot_sheets/show.html.haml
@@ -1,32 +1,35 @@
 -# TODO: translations
 
-.organized-page-header
-  %h1
-    Hot Sheet
-    %small.less-strong
-      for
-      - if @today
-        today
-      - else
-        #{@day}
-
-- if @hot_sheet.blank?
-  - if current_organization.hot_sheet_configuration.present? && current_organization.hot_sheet_configuration.enabled?
-    - if @today
-      %h3.uncap
-        Hot sheet not created yet!
-      %p Please wait a few minutes
-    - else
-      %h3.uncap
-        No hotsheet for #{@day}
-  - else
-    .alert.alert-info
-      %h3.uncap
-        Hot Sheets are not enabled!
-      - if current_user.admin_of?(current_organization)
-        %p
-          Enable them on the
-          %span{ style: "text-decoration: underline;" } #{link_to "Hot Sheet configuration page", edit_organization_hot_sheet_path(organization_id: current_organization.to_param)}
+- if !current_organization.hot_sheet_enabled?
+  .alert.alert-info
+    %h3.uncap
+      Hot Sheets are not enabled!
+    - if current_user.admin_of?(current_organization)
+      %p
+        Enable them on the
+        %span{ style: "text-decoration: underline;" } #{link_to "Hot Sheet configuration page", edit_organization_hot_sheet_path(organization_id: current_organization.to_param)}
 
 - else
+  .hot-sheet-header
+    %h1
+      #{current_organization.short_name} Hot Sheet
+    .row
+      .col-xs-1.col-md-2
+        - unless @current
+          = link_to "<", "#"
+      .col-xs-10.col-md-8
+        %h3
+          - if @current
+            Current
+          - elsif @hot_sheet.present?
+            @day
+          - else
+            %h3.uncap
+              No hotsheet for #{@day}
+      .col-xs-1.col-md-2
+        - unless @next.blank?
+          = link_to ">", "#"
   HOT SHEEEET
+
+  %alert.alert-info
+    %h4
