hot sheet mailer

--- a/app/assets/stylesheets/email.scss
+++ b/app/assets/stylesheets/email.scss
@@ -14,6 +14,7 @@ $email-light-bg: #ddd;
 @import "revised/emails/email_bike_display";
 @import "revised/emails/email_stolen_checklist";
 @import "revised/emails/email_partners";
+@import "revised/emails/hot_sheet";
 
 .stolen-notification-from {
   background: $gray-lighter;
