--- a/app/assets/stylesheets/revised.scss
+++ b/app/assets/stylesheets/revised.scss
@@ -174,6 +174,7 @@ $zoom-img-wrap-z-index: $zindex-navbar-fixed + 100;
 @import "revised/pages/organized/bikes";
 @import "revised/pages/organized/dashboard";
 @import "revised/sections/organized_menu";
+@import "revised/emails/hot_sheet";
 
 // left hand organized menu
 
