--- a/app/assets/stylesheets/revised.scss
+++ b/app/assets/stylesheets/revised.scss
@@ -393,6 +393,11 @@ body {
   }
 }
 
+.text-underline {
+  text-decoration: underline;
+}
+
+
 // Taken from bootstrap 4.3.1
 //
 // Utilities for common `display` values
