--- a/app/javascript/stylesheets/_utils.scss
+++ b/app/javascript/stylesheets/_utils.scss
@@ -17,9 +17,14 @@
   }
 }
 
+.text-underline {
+  text-decoration: underline;
+}
+
 label {
   cursor: pointer;
 }
+
 .em {
   font-style: italic;
 }
