--- a/app/views/organized/hot_sheets/edit.html.haml
+++ b/app/views/organized/hot_sheets/edit.html.haml
@@ -28,7 +28,7 @@
     %h3.uncap
       Organization does not have a base location
     %p
-      = link_to "Add a location", locations_organization_manage_path(organization_id: current_organization.to_param)
+      = link_to "Add a location", locations_organization_manage_path(organization_id: current_organization.to_param), class: "text-underline"
       to be able to enable Hot Sheet
 .row
   .col-md-6
