--- a/app/assets/stylesheets/revised/sections/form_well.scss
+++ b/app/assets/stylesheets/revised/sections/form_well.scss
@@ -203,6 +203,7 @@
       margin: 0 15px (2 * $vertical-height) 10%;
       border-bottom: 1px $form-well-divider-color solid;
       padding-top: $vertical-height;
+      padding-bottom: $vertical-height;
     }
 
     // .related-fields::after aren't the same width as unnessted-fields because they aren't rows
