--- a/app/views/admin/organizations/show.html.haml
+++ b/app/views/admin/organizations/show.html.haml
@@ -242,7 +242,7 @@
                 - if @organization.hot_sheet_enabled?
                   Enabled
                   %em.less-strong
-                    = organization.memberships.notification_daily.count
+                    = @organization.memberships.notification_daily.count
                     recipients
                 - else
                   %span.less-strong not enabled
