--- a/app/views/users/_edit_root.html.haml
+++ b/app/views/users/_edit_root.html.haml
@@ -24,6 +24,8 @@
         = t(".give_us_permission_html", why_you_should_link: why_you_should_link)
 
     - hot_sheet_organizations = current_user.organizations.select { |o| o.hot_sheet_enabled? }
+    - if hot_sheet_organizations.any?
+      = hidden_field_tag :hot_sheet_organization_ids, hot_sheet_organizations.pluck(:id).join(",")
     - hot_sheet_organizations.each do |organization|
       .form-group.row
         %label.form-well-label
