--- a/app/assets/stylesheets/revised.scss
+++ b/app/assets/stylesheets/revised.scss
@@ -173,6 +173,7 @@ $zoom-img-wrap-z-index: $zindex-navbar-fixed + 100;
 @import "revised/pages/organized/exports";
 @import "revised/pages/organized/bikes";
 @import "revised/pages/organized/dashboard";
+@import "revised/pages/organized/hot_sheet";
 @import "revised/sections/organized_menu";
 
 // left hand organized menu
@@ -391,6 +392,11 @@ body {
     opacity: 0.9;
   }
 }
+
+.text-underline {
+  text-decoration: underline;
+}
+
 
 // Taken from bootstrap 4.3.1
 //
