--- a/app/assets/stylesheets/revised/pages/user/edit.scss
+++ b/app/assets/stylesheets/revised/pages/user/edit.scss
@@ -1,4 +1,10 @@
 #users_edit {
+  .user-notification-checks {
+    .form-well-input {
+      line-height: 1.5em;
+    }
+  }
+
   .delete-email {
     color: $gray-light;
     display: block;
