--- a/app/views/admin/organizations/show.html.haml
+++ b/app/views/admin/organizations/show.html.haml
@@ -235,6 +235,18 @@
               - else
                 %small.less-strong
                   None
+          - if @organization.enabled?("hot_sheet")
+            %tr
+              %td Hot Sheet
+              %td
+                - if @organization.hot_sheet_enabled?
+                  Enabled
+                  %em.less-strong
+                    = "recipient".pluralize(@organization.hot_sheet_configuration.current_recipients.count)
+                - else
+                  %span.less-strong not enabled
+                %small
+                  = link_to "configuration", edit_organization_hot_sheet_path(organization_id: @organization.to_param)
           %tr
             %td Stickers
             %td
