--- a/app/views/organized/hot_sheets/show.html.haml
+++ b/app/views/organized/hot_sheets/show.html.haml
@@ -51,11 +51,10 @@
       .col-lg-8
         %ul.hot-sheet-list
           - @hot_sheet.fetch_stolen_records.each do |stolen_record|
+            - bike = stolen_record.bike
+            - thumb_url = bike.thumb_path || bike.stock_photo_url
+            - bike_link = bike_url(bike, organization_id: @organization.to_param)
             %li
-              - bike = stolen_record.bike
-              - thumb_url = bike.thumb_path || bike.stock_photo_url
-              - bike_link = bike_url(bike, organization_id: @organization.to_param)
-
               - unless thumb_url.present?
                 - thumbclass = 'placeholder'
                 - thumb_url = 'https://files.bikeindex.org/email_assets/bike_photo_placeholder.png'
@@ -67,20 +66,31 @@
                 .bike-info
                   %span.bike-main-info
                     = link_to organized_bike_text(bike, skip_creation: true), bike_link
+                  - if stolen_record.recovered?
+                    .recovered-alert
+                      %h3.uncap Bike was recovered!
                   %table.table-list.mb-0
                     %tr
                       %td Serial
                       %td= bike.serial_display
+                    - if stolen_record.recovered?
+                      %tr
+                        %td
+                          %span.text-success Recovered
+                        %td
+                          %span.convertTime.preciseTime
+                            = l stolen_record.recovered_at, format: :convert_time
 
-                    %tr
-                      %td
-                        %span.stolen-color Stolen at
-                      %td
-                        %span.convertTime.preciseTime
-                          = l stolen_record.date_stolen, format: :convert_time
+                    - else
+                      %tr
+                        %td
+                          %span.stolen-color Stolen at
+                        %td
+                          %span.convertTime.preciseTime
+                            = l stolen_record.date_stolen, format: :convert_time
 
-                    %tr
-                      %td
-                        %span.stolen-color From
-                      %td
-                        = Geocodeable.address(stolen_record, country: false)
+                      %tr
+                        %td
+                          %span.stolen-color From
+                        %td
+                          = Geocodeable.address(stolen_record, country: false)
